# wasm-component-bsn-demo

./: .gitignore  1-componentize-string-length-validator.sh  10-componentize-bsn-validator.sh  11-compose-bsn-validator.sh  12-transpile-bsn-validator-composed.sh  13-run-3.sh  2-transpile-string-length-validator.sh  3-build-bsn-nineproof-validator.sh  4-transpile-bsn-nineproof-validator.sh  5-run-1.sh  6-build-bsn-nineproof-validator-ext.sh  7-compose-bsn-nineproof-validator-ext.sh  8-transpile-bsn-nineproof-validator-composed.sh  9-run-2.sh  Cargo.toml  README.md  index.html  package-lock.json  package.json
docs/: elevenproof.md
js/: main.js
js/components/: README.md
js/components/bsn-nineproof-validator/: bsn_nineproof_validator.core.wasm  bsn_nineproof_validator.d.ts  bsn_nineproof_validator.js
js/components/bsn-nineproof-validator-composed/: bsn_nineproof_validator_composed.core4.wasm  bsn_nineproof_validator_composed.d.ts  bsn_nineproof_validator_composed.js
js/components/bsn-nineproof-validator-composed/interfaces/: summit25-validator-string-validation.d.ts  (+1 more)
js/components/bsn-validator/: bsn_validator_composed.core3.wasm  bsn_validator_composed.d.ts  bsn_validator_composed.js
js/components/string-length-validator/: string_length_validator.d.ts  string_length_validator.js
rust/: README.md
rust/bsn-nineproof-validator/: Cargo.toml
rust/bsn-nineproof-validator-ext/: Cargo.toml
rust/bsn-nineproof-validator-ext/src/: bindings.rs  lib.rs
rust/bsn-nineproof-validator/src/: bindings.rs  lib.rs
wit/: extended.wit  runner.wit  validator.wit
(+3 files in other folders)
