[workspace]
resolver = "2"
members = ["rust/bsn-nineproof-validator", "rust/bsn-nineproof-validator-ext"]

[workspace.package]
version = "1.0.0"
authors = ["rvtv"]
description = "demo implementation of bsn validation using wasm components"
edition = "2024"

[workspace.dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
